tests/pass/repro_unary.tk
import std/io::println
import std/memory::assert

shape Data (
    val: i32
)

fn check_unique_ptr(^?ptr: Data) {
    if ^?ptr is ^ptr {
        println("Unique pointer is not nullptr confirmed {}", ptr.val)
    } else {
        println("Unique pointer is nullptr confirmed")
    }
}

fn check_shared_ptr(~?ptr: Data) {
    if ~?ptr != nullptr {
        println("Unique pointer is not nullptr confirmed")
    } else {
        println("Unique pointer is nullptr confirmed")
    }
}

fn check_raw_ptr(*?ptr: Data) {
    if *?ptr != nullptr {
        println("Unique pointer is not nullptr confirmed")
    } else {
        println("Unique pointer is nullptr confirmed")
    }
}



fn main() -> i32 {
    auto ^?p = new Data(val = 10)
    check_unique_ptr(^?p)

    auto *?q:Data = nullptr
    check_raw_ptr(*?q)

    auto ~?r = new Data(val = 20)
    check_shared_ptr(~?r)

    return 0
}
