tests/reject/fail_null_access.tk
struct Data { v: i32 }
fn main() -> i32 {
    let ^?p = new Data { v = 42 };
    let x = p.v; // Error: p is nullable
    return 0;
}
